[gd_scene load_steps=2 format=3 uid="uid://b4pkd0sepuhyb"]

[ext_resource type="Script" uid="uid://fpwtrapdxsnv" path="res://ui/Lobby.gd" id="1_6jt0u"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6jt0u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LobbyName" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Refresh" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh Browser"

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join Lobby"

[node name="LobbyList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
